--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="card-white">
 				<h1>Coucou, moi c'est Ninon Paulet !</h1>
 	    		<div class="image-container">
-  				<img src="tete.jpg" alt="C'est moi">
+  				<img src="Screenshot 2024-03-13 at 11.34.53.png" alt="C'est moi">
   				</div>
 	    		<h3>Je suis française. Je suis actuellement a l'ESSEC et j'habite à Cergy, mais j'ai aussi habité à Clermont-Ferrand.</h3>
 				<a href="https://www.essec.edu/fr/global-bba/" target="_blank" class="btn-blue">Essec BBA
