--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container" id="intro">
 			<div class="card-white">
 				<h1>Coucou, moi c'est Ninon Paulet !</h1>
-	    		<div class="image-container">
+	    		<div class="images-container">
   				<img src="Screenshot 2024-03-13 at 11.34.53.png" alt="C'est moi">
   				</div>
 	    		<h3>Je suis française. Je suis actuellement a l'ESSEC et j'habite à Cergy, mais j'ai aussi habité à Clermont-Ferrand.</h3>
