--- a/index.html
+++ b/index.html
@@ -15,38 +15,38 @@
 	<body>
 		<div class="container" id="intro">
 			<div class="card-white">
-				<h1>Coucou, moi c'est Ninon Paulet !</h1>
+				<h1>Hello, I'm Ninon Paulet !</h1>
 	    		<div class="images-container">
   				<img src="Screenshot 2024-03-13 at 11.34.53.png" alt="C'est moi">
   				</div>
-	    		<h3>Je suis française. Je suis actuellement a l'ESSEC et j'habite à Cergy, mais j'ai aussi habité à Clermont-Ferrand.</h3>
+	    		<h3>JI'm french. I'm currently studying in ESSEC, in Cergy, but I used to live in Clermont-Ferrand.</h3>
 				<a href="https://www.essec.edu/fr/global-bba/" target="_blank" class="btn-blue">Essec BBA
 				</a>
 			</div>
 
 			<div class="card-white">
-				<h2>J'adore l'art</h2>
+				<h2>I'm passionate about art</h2>
 				<h3>
-				J'aime dessiner, peindre, la mode.'.
+				I love drawing, painting, fashion.'.
 				</h3>			
 			</div>
 
 			<div class="card-white">
-				<h2>J'aime aussi le cinéma.</h2>
+				<h2>I also enjoy cinema!</h2>
 				<h3>
-				Je pense que je suis champion du monde de <strong>binge watching.</strong>
+				Actually, I think I may be the world champion of <strong>binge watching.</strong>
 				</h3>
 			</div>
 
 			<div class="card-white">
-				<h2>J'adore aussi la musique !</h2>
+				<h2>I'm a music lover as well!</h2>
 				<h3>
-				J'ai une culture musicale assez étendue, allant du rnb, au rap, en passant par la musique éléctronique comme la house ou encore le jazz.
+				I've got a pretty broad musical culture, ranging from rnb and rap to electronic music like house and jazz.
 				</h3>
 			</div>
 
 			<div class="card-white">
-				<h2>N'hésite pas à me suivre sur mes réseaux</h2>
+				<h2>Don't hesitate to follow me on my social media</h2>
 				<ul clas="list-inline">
 					<li>
 						<a href="https://www.instagram.com/ninon_plt/" target="_blank">
