--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="card-white">
 				<h2>I'm passionate about art</h2>
 				<h3>
-				I love drawing, painting, fashion.'.
+				I love drawing, painting, fashion,...'.
 				</h3>			
 			</div>
 
