--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-		<meta name="description" content="Bienvenue sur mon profil !">
+		<meta name="description" content="Welcome to my page !">
 		<title>Profil de Ninon Paulet</title>
 		<script src="https://kit.fontawesome.com/cabebcdd29.js" crossorigin="anonymous"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
