--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	    		<div class="images-container">
   				<img src="Screenshot 2024-03-13 at 11.34.53.png" alt="C'est moi">
   				</div>
-	    		<h3>JI'm french. I'm currently studying in ESSEC, in Cergy, but I used to live in Clermont-Ferrand.</h3>
+	    		<h3>I'm french. I'm currently studying in ESSEC, in Cergy, but I used to live in Clermont-Ferrand.</h3>
 				<a href="https://www.essec.edu/fr/global-bba/" target="_blank" class="btn-blue">Essec BBA
 				</a>
 			</div>
@@ -27,7 +27,7 @@
 			<div class="card-white">
 				<h2>I'm passionate about art</h2>
 				<h3>
-				I love drawing, painting, fashion,...'.
+				I love drawing, painting, fashion,...
 				</h3>			
 			</div>
 
